changed width of monologue-controls from 580px to 620px to prevent expand/collapse icon from wrapping to second line when on pages for 12th night.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -471,7 +471,7 @@ th.th-pad-right {
     display: inline-block;
     line-height: 200%;
     padding: 2px;
-    width: 580px;
+    width: 620px;
     color: gray;
 }
 
